--- a/func_alma_notifier/templates/email_template.html.j2
+++ b/func_alma_notifier/templates/email_template.html.j2
@@ -13,7 +13,7 @@
 </head>
 <body>
     {# --- Email Body --- #}
-    <h1>{{ email_caption) }}'</h1>
+    <h1>{{ email_caption }}</h1>
 
     {# --- Render HTML Table --- #}
     {{ data_table_html | safe }}
